feat: finished expense_plan crud - for real
