# api/router/main.go
@@ -12,6 +12,7 @@ func SetupRouter() *http.ServeMux {
 	mux.HandleFunc("/expense-plan/get", handler.GetExpensePlan)
 	mux.HandleFunc("/expense-plan/create", handler.CreateExpensePlan)
 	mux.HandleFunc("/expense-plan/update", handler.UpdateExpensePlan)
+	mux.HandleFunc("/expense-plan/delete", handler.DeleteExpensePlan)
 
 	return mux
 }
